@startuml
'https://plantuml.com/class-diagram

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam roundcorner 20
hide enum methods

package "Diagramme de Classe d'Analyse V2 " <<Folder>> {
  interface AntFacadeController <<interface>> #pink ##[bold]red {

  }

  class Graphe #lightcoral;line.bold {
      estObstacle
      estNourriture
      quantityFood
      quantityPheromone
      row
      column
      theNoeud
  }

  class Colonie #burlywood {
      numColonie
      evaporationParam
      foodParam
      pheromoneParam
      quantityFood
  }

  class Noeud #burlywood {
      coordonneeNoeud
  }

  class AntFacade #back:Wheat;line.bold {
      grid
      graphe
      theSoldiers
      theWorkers
      reine
      width
      height
      xColonie
      yColonie
      antHisto
  }

    class AntFacadeHistorique #back:Wheat;line.bold {
        grid
        width
        height
        durationPlay
        fLog
        fw
        graphe
    }

  interface Fourmis <<interface>> #lightgreen;line:green {
  }

  class Reine #lightblue;line:green {
      x
      y
      colonie
      graphe
      theSoldiers
      theWorkers
  }

  interface IFourmisMove <<interface>> #lightgreen;line:green {

    }

  abstract class FourmisMove #lightgreen;line:green {
     listNoeud
     random
     record
  }

    class Soldat #mediumpurple;line:darkviolet {
        nombreSoldat
        colonie
        x
        y
        g
        positionActuel
        numeroSoldat
    }

  abstract class MoveOuvrier #gold;line:goldenrod  {
       x
       y
       graphe
       positionActuel
       listNoeud
       listNoeudRetour
       aVisite
       etatRetour
       quantityFoodTaken
       colonie
       random
       record
       estObstacle
  }

   class Ouvrier #mediumpurple;line:darkviolet {
        nombreOuvrier
        colonie
        g
    }

}

    AntFacadeController <|.. AntFacade : <<implements>>
    AntFacade .right.|> Graphe : <<instantiate>>
    AntFacade ..|> Reine : <<instantiate>>
    AntFacade ..|> AntFacadeHistorique : <<instantiate>>

    Graphe *-right-> Noeud : > contient

    Reine *->  Colonie : > appartient
    Noeud *--> Fourmis : > comporte

    Fourmis <|.. Reine : <<implements>>
    Fourmis <|.. IFourmisMove : <<extends>>

    IFourmisMove <|..FourmisMove : <<implements>>
    FourmisMove <|.. MoveOuvrier : \n\n<<extends>>
    FourmisMove <|.. Soldat : \n\n<<extends>>

    MoveOuvrier <|-- Ouvrier : <<extends>>
    Reine o--> Soldat : > donne naissance
    Reine o--> Ouvrier : > donne naissance

    Ouvrier ..> Colonie : <<use>>
    Reine ..> Graphe : <<use>>
    Soldat ..> Colonie : <<use>>
    Ouvrier ..> Graphe : <<use>>
    Soldat ..> Graphe : <<use>>
    FourmisMove ..> Noeud : <<use>>
    FourmisMove ..> Graphe : <<use>>
    MoveOuvrier ..> Noeud : <<use>>
    MoveOuvrier ..> Graphe : <<use>>
    AntFacadeHistorique ..> Soldat : <<use>>
    AntFacadeHistorique ..> Ouvrier : <<use>>



@enduml